# python-perl-regex

./: README.md  perl_regex.py  pyproject.toml
tests/: test_perl_regex.py
